public interface IActivatable
{
	void Activate();
}
