interface IInteractable
{
    void Interact();
    void Highlight(bool InEnabled);
}
